@@ -1,3 +1,7 @@
+2008-08-12  Anatoly Sokolov  <aesok@post.ru>
+
+        * final.c (final_scan_insn): Use app_enable/app_disable functions.
+
 2008-08-12  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
 
 	PR bootstrap/37097
